--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
-    "thunk": "^0.0.1",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2",
     "yup": "^0.27.0"
   },
